fix gap section

--- a/src/app/wallet/index.scss
+++ b/src/app/wallet/index.scss
@@ -33,11 +33,11 @@
 
 @media (max-width: 786px) {
     .wallet-page{
-        gap: 48px;
+        gap: 100px;
     }
 
     .section-container{
-        gap: 16px
+        gap: 46px
     }
 
     .item-responsive{
